--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,30 @@
-main {
-  font-family: system-ui;
-  text-align: center;
+@charset "UTF-8";
+
+/*-------- General --------*/
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  font-size: 20px;
+}
+
+/*-------- Navigation --------*/
+nav {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+nav ul {
+  list-style: none;
+  text-align: right;
+}
+
+nav ul li {
+  display: inline;
+  margin-right: 1.5rem;
+  cursor: pointer;
 }
