--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /*-------- General --------*/
-body {
+html {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   box-sizing: border-box;
@@ -9,8 +9,14 @@ body {
   padding: 0;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 p {
-  font-size: 20px;
+  font-size: 1.2rem;
 }
 
 /*-------- Navigation --------*/
@@ -25,6 +31,7 @@ nav ul {
 
 nav ul li {
   display: inline;
-  margin-right: 1.5rem;
-  cursor: pointer;
+  margin-right: 2rem;
 }
+
+/*-------- Below CSS Only For Testing Purposes --------*/
