--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,16 @@
 
 /*-------- General --------*/
 html {
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
+  font-family: "Roboto", sans-serif, "system-ui";
+  font-size: 100%;
   box-sizing: border-box;
+}
+
+body {
+  color: #333333;
   margin: 0;
   padding: 0;
+  height: 1500px;
 }
 
 *,
@@ -15,13 +20,13 @@ html {
   box-sizing: inherit;
 }
 
-p {
-  font-size: 1.2rem;
-}
-
 /*-------- Navigation --------*/
 nav {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  position: sticky;
+  top: 0px;
+  background: #ffffff;
+  box-shadow: 0px 6px 14px -6px rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 nav ul {
@@ -30,8 +35,15 @@ nav ul {
 }
 
 nav ul li {
-  display: inline;
-  margin-right: 2rem;
+  font-weight: 300;
 }
 
-/*-------- Below CSS Only For Testing Purposes --------*/
+nav ul li a {
+  text-decoration: none;
+  color: inherit;
+}
+
+/*-------- Hero ------*/
+.hero-img {
+  max-width: 40%;
+}
