--- a/css/home.css
+++ b/css/home.css
@@ -1,14 +1,17 @@
 @charset "UTF-8";
 
 /*-------- Hero ------*/
-img.hero-img {
-  max-width: 40%;
-  margin-top: 3rem;
-  float: right;
+
+main h1.hero-heading {
+  text-align: center;
 }
 
-.card {
-  display: inline-block;
-  width: 25%;
-  border: 1px solid black;
+img.hero-img {
+  max-width: 340px;
+  background: var(--primary-bg);
+  border-radius: 2rem;
+}
+
+section.card {
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
