--- a/css/home.css
+++ b/css/home.css
@@ -2,27 +2,33 @@
 
 /*-------- Hero ------*/
 main div.hero-heading {
-  margin: 4rem auto;
+  margin: 3rem auto 0 auto;
   text-align: center;
 }
 
+main div.hero-heading h1 {
+  margin-bottom: 1rem;
+}
+
 main img.hero-img {
-  float: right;
-  max-width: 400px;
+  max-width: 240px;
+  background: var(--primary-bg);
+  border-radius: 0.6rem;
 }
 
 main section.cta-cards-wrapper {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 main section.cta-cards-wrapper article {
-  width: 350px;
-  padding: 0.5rem;
+  max-width: 560px;
+  padding: 1rem;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 0.2rem;
 }
 
-main section.cta-cards-wrapper article:nth-of-type(2) {
-  margin-left: 2rem;
+main section.cta-cards-wrapper article h2 {
+  margin: 0;
 }
