--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,7 @@ nav {
   display: flex;
   position: sticky;
   align-items: center;
+  justify-content: space-around;
   top: 0px;
   background: var(--body-bg);
   box-shadow: 0px 6px 14px -6px rgba(0, 0, 0, 0.1);
@@ -43,18 +44,13 @@ nav {
 }
 
 nav ul {
-  margin: 5px 0;
+  margin: 2px 0;
   padding: 0;
   list-style: none;
-  flex: 1;
 }
 
 img.logo {
   max-width: 160px;
-}
-
-nav ul li {
-  display: inline-block;
 }
 
 nav ul li a {
@@ -63,29 +59,9 @@ nav ul li a {
 }
 
 ul.main-links {
-  text-align: center;
-  flex: 2;
-}
-
-ul.main-links li {
-  margin-right: 2.6rem;
-}
-
-ul.quick-contact li {
-  float: right;
-}
-
-ul.logo-wrapper {
-  margin-left: 3.5rem;
-}
-ul.quick-contact {
-  margin-right: 3.5rem;
-}
-
-/* Make the Nav right and left margins consistent with the main, footer UI */
-main,
-footer {
-  margin: auto 3.5rem;
+  display: flex;
+  justify-content: space-around;
+  width: 40vw;
 }
 
 /*-------- Buttons --------*/
@@ -93,14 +69,15 @@ a.btn {
   display: inline-block;
   text-decoration: none;
   text-align: center;
-  padding: 0.6rem;
-  margin: 0.4rem;
+  padding: 0.6rem 0.8rem;
+  font-size: 1.2rem;
+  letter-spacing: 0.2px;
 }
 
 a.btn-primary {
   background: var(--primary);
   color: #ffffff;
-  font-weight: 500;
+  font-weight: 700;
   box-shadow: 0 2px 10px 0 rgba(5, 5, 5, 0.15);
   transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -110,7 +87,8 @@ a.btn-primary:hover {
 }
 
 /*-------- Footer --------*/
-footer p {
+footer {
+  text-align: center;
   font-size: 0.9rem;
   color: #7d7c83;
 }
