--- a/css/main.css
+++ b/css/main.css
@@ -18,11 +18,19 @@ html {
 
 body {
   color: var(--text-color);
-  margin: 0;
   padding: 0;
+  margin: 0;
   height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
+}
+
+nav,
+main,
+footer {
+  width: 90vw;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 *,
@@ -32,36 +40,30 @@ body {
 }
 
 /*-------- Navigation --------*/
-nav {
-  display: flex;
+header.nav-header {
   position: sticky;
-  align-items: center;
-  justify-content: space-around;
   top: 0px;
   background: var(--body-bg);
   box-shadow: 0px 6px 14px -6px rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-nav ul {
+header.nav-header nav ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   margin: 2px 0;
   padding: 0;
   list-style: none;
 }
 
-img.logo {
-  max-width: 160px;
-}
-
-nav ul li a {
+header.nav-header nav ul li a {
   text-decoration: none;
   color: inherit;
 }
 
-ul.main-links {
-  display: flex;
-  justify-content: space-around;
-  width: 40vw;
+img.logo {
+  max-width: 160px;
 }
 
 /*-------- Buttons --------*/
@@ -91,8 +93,11 @@ footer {
   text-align: center;
   font-size: 0.9rem;
   color: #7d7c83;
+  margin-top: 4vw;
 }
 
 footer p a {
   color: inherit;
 }
+
+/*-------- Media Queries For Tablet and Mobile --------*/
