--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ header.nav-header nav ul {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 2px 0;
+  margin: 4px 0;
   padding: 0;
   list-style: none;
 }
@@ -63,7 +63,8 @@ header.nav-header nav ul li a {
 }
 
 img.logo {
-  max-width: 160px;
+  width: 160px;
+  height: 44px;
 }
 
 /*-------- Buttons --------*/
@@ -101,3 +102,21 @@ footer p a {
 }
 
 /*-------- Media Queries For Tablet and Mobile --------*/
+@media (max-width: 760px) {
+  header.nav-header nav ul {
+    flex-direction: column;
+  }
+
+  header.nav-header nav ul li {
+    text-align: center;
+    padding: 0.6rem;
+  }
+
+  header.nav-header nav ul li:nth-of-type(2) {
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+  }
+
+  header.nav-header nav ul li:nth-of-type(2) span {
+    display: inline-block;
+  }
+}
