--- a/css/home.css
+++ b/css/home.css
@@ -30,3 +30,9 @@ main section.cta-cards-wrapper article h2 {
 }
 
 /*-------- Media Queries For Tablet and Mobile --------*/
+@media (max-width: 760px) {
+  main div.hero-heading {
+    margin: 4rem auto 2rem auto;
+    line-height: 1.2;
+  }
+}
