--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ footer p a {
 /*-------- Media Queries For Tablet and Mobile --------*/
 @media (max-width: 760px) {
   html {
-    font-size: 80%;
+    font-size: 90%;
   }
 
   header.nav-header nav ul {
@@ -114,11 +114,11 @@ footer p a {
     padding: 0.6rem;
   }
 
-  header.nav-header nav ul li:nth-of-type(2) {
+  header.nav-header nav ul li.contact {
     border-top: 1px solid rgba(0, 0, 0, 0.1);
   }
 
-  header.nav-header nav ul li:nth-of-type(2) span {
+  header.nav-header nav ul li.contact span {
     display: inline-block;
     line-height: 1.6;
   }
