--- a/about/about.css
+++ b/about/about.css
@@ -1,20 +1,34 @@
 /*-------- About Page CSS --------*/
-section.team-wrapper > article.member-card img.member-img {
+img.member-img {
   max-width: 100px;
   border-radius: 0.2rem;
   float: left;
+  margin-right: 1rem;
 }
 
 section.team-wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 5vw;
+  gap: 4rem;
 }
 
 section.team-wrapper > article.member-card {
   padding: 1rem;
-  max-width: 500px;
+  max-width: 480px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 0.2rem;
+}
+
+.member-head {
+  display: flow-root;
+}
+
+.member-head > h2,
+.member-head > h3 {
+  margin: 0;
+}
+
+.member-head > h2 {
+  margin: 6px 0;
 }
